# ZunnoGame

./: .gitignore  README.md
contracts/: SubscriptionConsumer.json  SubscriptionConsumer.sol  UnoGame.json  uno.sol
contracts/v02/: [Updated]SubscriptionConsumer.json  [Updated]UnoGame.json
proof_submission/: index.js  package-lock.json  package.json  proof.json
server/: Cargo.toml  index.js  users.js
server/backend/:  .env   .env.example  Cargo.toml  architecture.md
server/backend/src/: lib.rs  main.rs
server/backend/src/api/: game_routes.rs  mod.rs
server/backend/src/blockchain/: adapter.rs  mod.rs  types.rs  vrf.rs
server/backend/src/game/: mod.rs  operations.rs  state.rs
server/backend/src/orchestrator/: core.rs  mod.rs  storage.rs
server/backend/src/proof_management/: config.rs  errors.rs  mod.rs  proof_verification.rs  retry_service.rs  service.rs
server/lib/: .env  Cargo.toml
server/lib/src/: lib.rs
server/lib/src/api/: mod.rs
server/lib/src/blockchain/: mod.rs
server/lib/src/game/: mod.rs
server/program/: Cargo.toml
server/program/src/: main.rs
server/script/: Cargo.toml
server/script/src/: lib.rs
