[package]
name = "zunnogame-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.4"
tower-http = { version = "0.6.6", features = ["trace"] }

# Serialization
serde = { version =  "1.0.228",  default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }

# Blockchain integration
alloy = { version = "1.0.34", features = ["full"] }
alloy-sol-types = "1.3.1"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

#Pinata
pinata-sdk = "1.1.0"

# Utilities
dotenvy = "0.15"
chrono = "0.4.42"
url = "2.5.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10.9"
reqwest = "0.12.24"

zunnogame-lib = { path = "../lib" }
zunno-script = { path = "../script" }
