[package]
name = "zunnogame-lib"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Blockchain integration
alloy = { version = "1.0.34", features = ["full"] }
alloy-sol-types = "1.3.1"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

dotenvy = "0.15"
chrono = "0.4.42"
url = "2.5.7"
