[package]
name = "zunnogame-lib"
version = "0.1.0"
edition = "2021"

[dependencies]

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Blockchain integration
alloy-primitives = "1.2.1"
alloy-sol-types = "1.3.1"
