[package]
name = "zunnogame-lib"
version = "0.1.0"
edition = "2021"

[dependencies]

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Blockchain integration
alloy-sol-types = "1.3.1"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"
