[package]
version = "0.1.0"
name = "zunno-program"
edition = "2021"

[dependencies]

#Blockchain integration
alloy = { version = "1.0.34", features = ["full"] }
alloy-sol-types = "1.3.1"
alloy-primitives = "1.2.1"

#ProofSystem integration
sp1-zkvm = "5.0.8"

sha2="0.10.9"
zunnogame-lib = { path = "../lib" }
