[package]
version = "0.1.0"
name = "zunno-script"
edition = "2021"
default-run = "zunno"

[[bin]]
name = "zunno"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[lib]
name = "zunnogame_script"
path = "src/lib.rs"

[dependencies]

zunnogame-lib = { path = "../lib" }

# Alloy
alloy-primitives = "1.4.1"
alloy-sol-types = { version = "1.4.1", workspace = true }

# Serialization
serde = { version =  "1.0.228",  default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }
bincode = { version = "2.0.1", features = ["serde"] }

# Error handling
anyhow = "1.0.100"

# Logging
tracing = "0.1.41"

# Environment
dotenvy = "0.15.7"
hex = "0.4.3"
clap = { version = "4.5.49", features = ["derive"] }

# SP1
sp1-sdk = "5.0.8"
sp1-zkv-sdk = { git="https://github.com/zkVerify/sp1-verifier" }

[build-dependencies]
sp1-build = "5.0.8"
